--- a/src/main/java/com/mycompany/apiconnection/ChatGUI.form
+++ b/src/main/java/com/mycompany/apiconnection/ChatGUI.form
@@ -4,6 +4,25 @@
   <NonVisualComponents>
     <Component class="javax.swing.ButtonGroup" name="connectionRBG">
     </Component>
+    <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
+      <SubComponents>
+        <Menu class="javax.swing.JMenu" name="shareMU">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Share"/>
+          </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="portfolioMI">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Portfolio"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="portfolioMIActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
+      </SubComponents>
+    </Menu>
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
@@ -11,6 +30,7 @@
     <Property name="name" type="java.lang.String" value="chatFrame" noResource="true"/>
   </Properties>
   <SyntheticProperties>
+    <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
@@ -75,7 +95,7 @@
                           <Component id="serverRB" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="clientRB" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="28" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
